feat: add authentication with clerk

--- a/.env
+++ b/.env
@@ -6,4 +6,8 @@
 
 DATABASE_URL="postgresql://neondb_owner:kt6DyGP2JQaN@ep-snowy-mode-a57zbazt.us-east-2.aws.neon.tech/neondb?sslmode=require"
 
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_b3B0aW11bS1naG9zdC03NC5jbGVyay5hY2NvdW50cy5kZXYk"
+CLERK_SECRET_KEY="sk_test_pqC5CPZjzAaOoYedG07vdiTiki8chjttIAXXaENWG5"
+
+
 EMAIL="financeaiexodo@gmail.com"
