feat: add transaction type badge

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@clerk/themes": "^2.1.48",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "git-commit-msg-linter": "^5.0.8",
     "lucide-react": "^0.460.0",
     "next": "14.2.18",
     "prisma": "^5.21.1",
