--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@clerk/themes": "^2.1.48",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.21.1",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@stripe/stripe-js": "^5.3.0",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
@@ -30,6 +31,7 @@
     "git-commit-msg-linter": "^5.0.8",
     "lucide-react": "^0.460.0",
     "next": "14.2.18",
+    "next-themes": "^0.4.4",
     "prisma": "^5.21.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -37,6 +39,7 @@
     "react-hook-form": "^7.54.0",
     "react-number-format": "^5.4.2",
     "recharts": "^2.15.0",
+    "sonner": "^1.7.1",
     "stripe": "^17.4.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
